# unitri

./: .gitignore  CITATION.cff  MANIFEST.in  Makefile  README.md  _gmp.py  baseline.txt  check_topcom.py  crt_combine.py  environment-nogmp.yml  environment.yml  na-query-gmp.c  na-query.c  na_query.h  orig.c  profile.sh  pyproject.toml  regularity.py  run_tests.py  sample_triangulation.py  setup.py
.github/workflows/: ci.yml
arXiv-math0211268v2/: 1000.10_mod.eps  2-frozen.tex  222.14_mod.eps  3-frozen.tex  356357regirr_mod.eps  4-frozen.tex  43.13_mod.eps  5.tex  6.tex  7576regirr_mod.eps  a_triangulation3.pstex  a_triangulation3.pstex_t  above2.eps  anclin1.pstex  anclin1.pstex_t  anclin2.pstex  anclin2.pstex_t  anclin3.pstex  anclin3.pstex_t  appendix.tex  bcc2003.sty  bcc_ct.tex  biblio.tex  bounds.tex  capsmall.eps  fig3x3irr_mod.ps  fig3x3mic_mod.ps  fig3x4mic_mod.ps  fregm2-1.eps  fregm2-2.eps  fregm2-3.eps  intro.tex  santos1.eps  santos2.eps  shape2.eps  trias.tex  v_strip2recursion1+2.pstex  v_strip2recursion1+2.pstex_t  v_strip2recursion3+4.pstex  v_strip2recursion3+4.pstex_t  (+6 more)
benchmarks/: benchmark.py
tests/: _cli.py  _gmp.py  _topcom.py  benchmark.py  check_topcom.py  conftest.py  run_tests.py  test_convex_polygons.py  test_counts.py  test_crt_combine.py  test_ftable.py  test_mod_prime.py  test_readme_examples.py  test_symmetry.py  test_topcom_convex.py  test_unimodular.py  transforms.py
unitri/: __init__.py  __main__.py  crt_combine.py  crt_parallel.py  na-query.c  na_query.h  na_query.pyx  profiles.py
