[build-system]
requires = [
    "setuptools>=64",
    "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "unitri"
version = "0.1.0"
description = "Counting unimodular triangulations of a lattice polygon"
authors = [{ name = "Nate MacFadden for the Liam McAllister Group" }]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["lattice", "triangulation", "unimodular", "primitive", "polygon"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"

# the suite runs under pytest; the TOPCOM cross-checks
# (tests/test_topcom_convex.py, tests/check_topcom.py) also need CYTools;
# the extension itself needs nothing beyond a C toolchain + libgmp
[project.optional-dependencies]
test = ["pytest", "cytools"]

[tool.setuptools]
packages = ["unitri"]

[tool.setuptools.package-data]
unitri = ["*.pyx", "*.h", "*.c"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
# ruff's default rule set, pinned so a ruff upgrade can't silently change what
# CI enforces: pyflakes (F) plus pycodestyle import/statement/runtime errors.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
files = ["unitri"]

# the compiled Cython extension (unitri.na_query) ships no type stubs, so its
# implementation can't be checked; its pure-Python wrappers still are.
[[tool.mypy.overrides]]
module = "unitri.na_query"
ignore_missing_imports = true
